Easy spaces/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>