Easy spaces/main/default/objects/Resource__c/fields/Any_Offers_in_Hand__c.field-meta.xml
<CustomField>
    <fullName>Any_Offers_in_Hand__c</fullName>
    <label>Any Offers in Hand</label>
    <type>TextArea</type>
</CustomField>