Easy spaces/main/default/objects/Resource__c/fields/Comment_Box__c.field-meta.xml
<CustomField>
    <fullName>Comment_Box__c</fullName>
    <label>Comment Box</label>
    <type>TextArea</type>
</CustomField>