Easy spaces/main/default/objects/Resource__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <label>CTC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>