Easy spaces/main/default/objects/Resource__c/fields/Current_CTC__c.field-meta.xml
<CustomField>
    <fullName>Current_CTC__c</fullName>
    <label>Current CTC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>