Easy spaces/main/default/objects/Resource__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>