Easy spaces/main/default/objects/Resource__c/fields/Current_Organization__c.field-meta.xml
<CustomField>
    <fullName>Current_Organization__c</fullName>
    <label>Current Organization</label>
    <length>60</length>
    <type>Text</type>
</CustomField>