Easy spaces/main/default/objects/Resource__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification ?</label>
    <type>Checkbox</type>
</CustomField>