Easy spaces/main/default/objects/Resource__c/fields/Expected_CTC__c.field-meta.xml
<CustomField>
    <fullName>Expected_CTC__c</fullName>
    <label>Expected CTC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>