Easy spaces/main/default/objects/Resource__c/fields/Feedback1__c.field-meta.xml
<CustomField>
    <fullName>Feedback1__c</fullName>
    <label>Feedback1</label>
    <type>TextArea</type>
</CustomField>