Easy spaces/main/default/objects/Resource__c/fields/Feedback2__c.field-meta.xml
<CustomField>
    <fullName>Feedback2__c</fullName>
    <label>Feedback2</label>
    <type>TextArea</type>
</CustomField>