Easy spaces/main/default/objects/Resource__c/fields/Feedback3__c.field-meta.xml
<CustomField>
    <fullName>Feedback3__c</fullName>
    <label>Feedback3</label>
    <type>TextArea</type>
</CustomField>