Easy spaces/main/default/objects/Resource__c/fields/Interviewer1__c.field-meta.xml
<CustomField>
    <fullName>Interviewer1__c</fullName>
    <label>Interviewer1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>