Easy spaces/main/default/objects/Resource__c/fields/Interviewer2__c.field-meta.xml
<CustomField>
    <fullName>Interviewer2__c</fullName>
    <label>Interviewer2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>