Easy spaces/main/default/objects/Resource__c/fields/Interviewer3__c.field-meta.xml
<CustomField>
    <fullName>Interviewer3__c</fullName>
    <label>Interviewer3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>