Easy spaces/main/default/objects/Resource__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Resource</relationshipLabel>
    <relationshipName>Resource</relationshipName>
    <type>Lookup</type>
</CustomField>