Easy spaces/main/default/objects/Resource__c/fields/Next_Level_Stages__c.field-meta.xml
<CustomField>
    <fullName>Next_Level_Stages__c</fullName>
    <label>Next Level Stages</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screening Rejection</fullName>
            </value>
            <value>
                <fullName>High CTC Expectation</fullName>
            </value>
            <value>
                <fullName>Location Constraint</fullName>
            </value>
            <value>
                <fullName>Interview Rejection</fullName>
            </value>
            <value>
                <fullName>HR Rejection</fullName>
            </value>
            <value>
                <fullName>1st Level</fullName>
            </value>
            <value>
                <fullName>2nd Level</fullName>
            </value>
            <value>
                <fullName>3rd Level</fullName>
            </value>
            <value>
                <fullName>Recommend Offer</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
            <value>
                <fullName>Joined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>