Easy spaces/main/default/objects/Resource__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <length>120</length>
    <type>Text</type>
</CustomField>