Easy spaces/main/default/objects/Resource__c/fields/Reasons_for_Job_Change__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Job_Change__c</fullName>
    <label>Reasons for Job Change</label>
    <type>TextArea</type>
</CustomField>