Easy spaces/main/default/objects/Resource__c/fields/Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name__c</fullName>
    <label>Recruiter Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>