Easy spaces/main/default/objects/Resource__c/fields/Relevant_Experience__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Experience__c</fullName>
    <label>Relevant Experience</label>
    <length>120</length>
    <type>Text</type>
</CustomField>