Easy spaces/main/default/objects/Resource__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;NEW&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>1st Level Interview</fullName>
            </value>
            <value>
                <fullName>2nd Level Interview</fullName>
            </value>
            <value>
                <fullName>3rd Level Interview</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>HR Discussion</fullName>
            </value>
            <value>
                <fullName>Recommend to Offer</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Joined</fullName>
            </value>
            <value>
                <fullName>Move to Next Stage</fullName>
                <isActive>false</isActive>
                <label>Move to Next Stage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>