Easy spaces/main/default/objects/Resource__c/fields/Total_year_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_year_of_Experience__c</fullName>
    <label>Total year of Experience</label>
    <length>60</length>
    <type>Text</type>
</CustomField>