Easy spaces/main/default/objects/Resource__c/validationRules/Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Mobile__c ) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile Number is Invalid</errorMessage>
</ValidationRule>