Easy spaces/main/default/objects/Resource__c/validationRules/Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Mobile__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile Number Should have only 10 digits</errorMessage>
</ValidationRule>